# Vound

./: .gitignore  README.md  agent.py  agent_v2.py  company_profile.md  excel_read_helpers.py  excel_write_helpers.py  main.py  notes.txt  pyproject.toml  tables.7z
tables/: 22b5da6f-d542-421f-b00b-8d360f06d0b0.xlsx  26e12403-6402-4249-9e3f-bfdbc5a38ab2.xlsx  7d34b779-5fbd-47a3-ac59-04b69c9058ed.xlsx  c433ba8b-76d9-4231-b916-8013f9f7b4da.xlsx  d6e2935c-8dea-4018-ba6c-8f2046a40386.xlsx
tables_filled/: 22b legacy.xlsx  22b5da6f-d542-421f-b00b-8d360f06d0b0.xlsx  26e12403-6402-4249-9e3f-bfdbc5a38ab2.xlsx  47249fc5-6258-4096-95b3-1e5779f2f35c.xlsx  7d34b779-5fbd-47a3-ac59-04b69c9058ed.xlsx  c433ba8b-76d9-4231-b916-8013f9f7b4da.xlsx  d6e2935c-8dea-4018-ba6c-8f2046a40386.xlsx
